--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: darkgrey;
 }
 
 #navigation-bar li {
